Fixed classpath for tests and updates test to gwt-test-utils 0.44