@@ -18,12 +18,6 @@
 		<maven.compiler.source>1.6</maven.compiler.source>
     	<maven.compiler.target>1.6</maven.compiler.target>
     	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<coverage.reports.dir>${basedir}/target/coverage-reports</coverage.reports.dir>
-	    <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-	    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPath>${coverage.reports.dir}/jacoco-unit.exec</sonar.jacoco.reportPath>
-		<sonar.jacoco.itReportPath>${coverage.reports.dir}/jacoco-it.exec</sonar.jacoco.itReportPath>
-		<sonar.jacoco.jar>${basedir}/lib/jacocoagent.jar</sonar.jacoco.jar>
 	</properties>
 
 	<dependencies>
@@ -548,6 +542,7 @@
 						</configuration>
 						<goals>
 							<goal>compile</goal>
+							<goal>test</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -567,20 +562,6 @@
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
-					<argLine>-javaagent:${sonar.jacoco.jar}=destfile=${sonar.jacoco.reportPath}</argLine>
-					<excludes>
-						<exclude>**/TestUtils.java</exclude>
-						<exclude>**/*TestUtils.java</exclude>
-						<exclude>**/*Mock.java</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 
